flux/apps/int/kitchenowl/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenowl
  labels:
    app.kubernetes.io/instance: kitchenowl
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: kitchenowl
      app.kubernetes.io/instance: kitchenowl
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kitchenowl
        app.kubernetes.io/instance: kitchenowl
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: kitchenowl
          image: "tombursch/kitchenowl:v0.7.9"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: kitchenowl-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: kitchenowl-data
          persistentVolumeClaim:
            claimName: kitchenowl-data-pvc
