flux/apps/int/kitchenowl/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kitchenowl-svc
  labels:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/instance: kitchenowl
spec:
  selector:
    app.kubernetes.io/name: kitchenowl
    app.kubernetes.io/instance: kitchenowl
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      targetPort: http
      protocol: TCP
